--- a/templates/registerBuyer.html
+++ b/templates/registerBuyer.html
@@ -36,5 +36,7 @@
         <input type="submit" class="btn" value="Register" required></br>
         
     </form>
+
+    <p class="bottom">Already have an account? <a class="bottom" href="{{url_for('login')}}"> Sign In here</a></p>
 </div>
 {% endblock %}
