--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
+<div align="center">
+    <h1>Login</h1>
+    <h2> {{ message }} </h2>
+    <form action="{{ url_for('login')}}" method="post">
 
+        <label for="email">Email</label>
+        <input id="email" name="email" placeholder="Email" required><br></br>
+
+        <label for="password">Password</label>
+        <input id="password" name="password" placeholder="Password" type="password" required><br></br>
+
+        
+        <label for="role" >Login as:</label>
+        <select id="role" name="role" required>
+            <option value="buyer">Buyer</option>
+            <option value="seller">Seller</option>
+        </select><br></br>
+
+        <input type="submit" class="btn" value="Login" required></br>
+    </form>
+
+    <p class="bottom">Don't have an account? Register as a <a class="bottom" href="{{url_for('registerBuyer')}}"> buyer</a> or a seller.</p>
+
+</div>
 {% endblock %}
