seller login/register

--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
         <input type="submit" class="btn" value="Login" required></br>
     </form>
 
-    <p class="bottom">Don't have an account? Register as a <a class="bottom" href="{{url_for('registerBuyer')}}"> buyer</a> or a seller.</p>
+    <p class="bottom">Don't have an account? Register as a <a class="bottom" href="{{url_for('registerBuyer')}}"> buyer</a> or <a class="bottom" href="{{url_for('registerSeller')}}">a seller</a>.</p>
 
 </div>
 {% endblock %}
