--- a/templates/registerBuyer.html
+++ b/templates/registerBuyer.html
@@ -21,7 +21,9 @@
         <select id="gender" name="gender" required>
             <option value="M">Male</option>
             <option value="F">Female</option>
-            <option value="T">T</option>
+            <option value="T">Transgender</option>
+            <option value="O">Other</option>
+            <option value="U">Unspecified</option>
         </select><br></br>
 
         <label for="contactNumber">Contact Number:</label>
