--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Furno</title>
     <link rel = "icon" href = "{{ url_for('static', filename='logo.png')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
 <body>
     <header>
-        <h1 class="title-h1">Furno</h1>
+        
     </header>
-
     <div class="maincont">
         {% block content %}
         {% endblock %}        
