--- a/templates/registerBuyer.html
+++ b/templates/registerBuyer.html
@@ -1,44 +1,82 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 {% block content %}
-<div align="center">
-    <h1>Buyer Registration</h1>
-    <h2>{{ message }}</h2>
-    <form action="{{ url_for('registerBuyer')}}" method="post">
+<div>
+    <div class="row">
+        <div class="col"></div>
+        <div class="col">
+            <h1 class="text-center">Buyer Registration</h1>
+            
+            <div class="text-center">
+                {{ message }}
+            </div>
 
-        <label for="firstName">First name:</label>
-        <input id="firstName" name="firstName" placeholder="First Name" class="textbox" required><br></br>
+            <form action="{{ url_for('registerBuyer')}}" method="post">
 
-        <label for="middleName">Middle name:</label>
-        <input id="middleName" name="middleName" placeholder="Middle Name" class="textbox"><br></br>
+                <div class="form-floating py-2">
+                    <input id="firstName" name="firstName" type="text" class="form-control" placeholder="First"
+                        required>
+                    <label for="firstName">First Name <span class="fw-light">(Required)</span></label>
+                </div>
 
-        <label for="lastName">Last name:</label>
-        <input id="lastName" name="lastName" placeholder="Last Name" class="textbox"><br></br>
+                <div class="form-floating py-2">
+                    <input id="middleName" name="middleName" type="text" class="form-control" placeholder="Middle">
+                    <label for="middleName">Middle Name</label>
+                </div>
 
-        <label for="dob">Date of Birth:</label>
-        <input id="dob" name="dob" placeholder="Date of Birth" type="date" required><br></br>
+                <div class="form-floating py-2">
+                    <input id="last" name="lastName" type="text" class="form-control" placeholder="Last">
+                    <label for="lastName">Last Name</label>
+                </div>
 
-        <label for="gender" >Gender:</label>
-        <select id="gender" name="gender" required>
-            <option value="M">Male</option>
-            <option value="F">Female</option>
-            <option value="T">Transgender</option>
-            <option value="O">Other</option>
-            <option value="U">Unspecified</option>
-        </select><br></br>
+                <div class="form-floating py-2">
+                    <input id="dob" name="dob" type="date" class="form-control" placeholder="Date of Birth"
+                        required>
+                    <label for="dob">Date of Birth <span class="fw-light">(Required)</span></label>
+                </div>
 
-        <label for="contactNumber">Contact Number:</label>
-        <input id="contactNumber" name="contactNumber" placeholder="Contact Number" class="textbox" required><br></br>
+                <div class="form-floating py-2">
+                    <select id="gender" name="gender" class="form-select" required>
+                        <option value="M">Male</option>
+                        <option value="F">Female</option>
+                        <option value="T">Transgender</option>
+                        <option value="O">Other</option>
+                        <option value="U">Unspecified</option>
+                    </select>
+                    <label for="role">Gender <span class="fw-light">(Required)</span></label>
+                </div>
 
-        <label for="email">Email:</label>
-        <input id="email" name="email" placeholder="Email" class="textbox" required><br></br>
+                <div class="form-floating py-2">
+                    <input id="contactNumber" name="contactNumber" type="text" class="form-control" placeholder="Contact Number"
+                        required>
+                    <label for="contactNumber">Contact Number <span class="fw-light">(Required)</span></label>
+                </div>
 
-        <label for="password">Password:</label>
-        <input id="password" name="password" placeholder="Password" type="password" required>
+                <div class="form-floating py-2">
+                    <input id="email" name="email" type="email" class="form-control" placeholder="example@example.com"
+                        required>
+                    <label for="email">Email Address <span class="fw-light">(Required)</span></label>
+                </div>
 
-        <input type="submit" class="btn" value="Register" required></br>
-        
-    </form>
+                <div class="form-floating py-2">
+                    <input id="password" name="password" type="password" class="form-control" placeholder="password"
+                        required>
+                    <label for="password"> Password</label>
+                </div>
 
-    <p class="bottom">Already have an account? <a class="bottom" href="{{url_for('login')}}"> Sign In here</a></p>
+                <div class="py-2">
+                </div>
+
+                <div class="d-grid gap-2 col-6 mx-auto">
+                    <button type="submit" class="btn btn-outline-success btn-lg" value="register" required>Register</button>
+                </div>
+            </form>
+            <div class="text-center py-2">
+                <p class="bottom">Already have an account? <a class="bottom" href="{{url_for('login')}}"> Sign In here</a></p>
+            </div>
+        </div>
+        <div class="col"></div>
+    </div>
+
+
 </div>
 {% endblock %}
