--- a/templates/home.html
+++ b/templates/home.html
@@ -8,10 +8,10 @@
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Profile</a>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="#">View Profile</a></li>
+      <li><a class="dropdown-item" href=" {{ url_for('profile', role=session['role'] , id=account['buyerID']) }}">View Profile</a></li>
       <li><a class="dropdown-item" href="#">Edit Profile</a></li>
       <li><hr class="dropdown-divider"></li>
-      <li><a class="dropdown-item" href="#">Change Password</a></li>
+      <li><a class="dropdown-item" href="{{ url_for('change_password', role=session['role']) }}">Change Password</a></li>
     </ul>
   </li>
   <li class="nav-item">
@@ -21,5 +21,4 @@
 {% endblock %}
 
 {% block content %}
-<h1> {{ message }} </h1>
 {% endblock %}
