--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
   <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{{ url_for('login') }}">
+      <a class="navbar-brand" href="{{ url_for('home') }}">
         furno
       </a>
 
