--- a/templates/seller_home.html
+++ b/templates/seller_home.html
@@ -1,2 +1,37 @@
-{% extends "index.html" %}
-<h3>Hello {{ message }}</h3>
+{% extends "home.html" %}
+{% block navbar %}
+
+{{ super() }}
+
+{% endblock %}
+
+{% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8 py-4">
+            <h3>Your product listings</h3>
+            <div>
+                {% for i in product %}
+                <div class="card mb-3 py-4 px-4">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="{{ i['imageLink'] }}" class="img-fluid rounded-start" alt="{{ i['productName'] }}">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body px-5">
+                        <h5 class="card-title">{{ i['productName'] }}</h5>
+                        <p class="card-text">Available at: &#x20b9; {{ i['productPrice'] }}</p>
+                        <p class="card-text">Sold by: {{ i['sellerName'] }}</p>
+                        <a href="{{ url_for('product_page', productID=i['productID']) }}" class="btn btn-primary">Read More</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                {% endfor %}
+              </div>
+        </div>
+        <div class="col-2"></div>
+    </div>
+</div>
+{% endblock %}
